--- a/Day6/index.html
+++ b/Day6/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="heading">
-            <h1>Introductiom</h1>
+            <h1>Introduction</h1>
         </div>
         <div class="Details-Section">
             <p><b>Name :</b>Mohit vijayvargiya</p>
